把jupyternotebook的代码慢慢迁移成普通python代码

--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,8 @@ selenium = "*"
 webdriver-manager = "*"
 matplotlib = "*"
 pandas = "*"
+sklearn = "*"
+jupyter = "*"
 
 [requires]
 python_version = "3.7"
